[gd_scene load_steps=13 format=3 uid="uid://d0y0b0ibmt0f1"]

[ext_resource type="PackedScene" uid="uid://7f3ehu7qijgv" path="res://meshes/baby.glb" id="1_k8j53"]
[ext_resource type="Script" uid="uid://4yxibxoaxhbh" path="res://scenes/baby.gd" id="1_r1op0"]
[ext_resource type="AudioStream" uid="uid://p3naap0rvcrd" path="res://sounds/key-insert1.wav" id="3_7unom"]
[ext_resource type="AudioStream" uid="uid://desxidsic5wxj" path="res://sounds/key-insert2.wav" id="4_nguq0"]
[ext_resource type="AudioStream" uid="uid://ccqgog7hc0a5c" path="res://sounds/key-insert3.wav" id="5_mkvtx"]
[ext_resource type="AudioStream" uid="uid://dec8jt4wyhkfn" path="res://sounds/key-insert4.wav" id="6_hwmnf"]
[ext_resource type="AudioStream" uid="uid://flraplyrw8m" path="res://sounds/key-remove1.wav" id="7_hudg4"]
[ext_resource type="AudioStream" uid="uid://dua6i8r3nmdib" path="res://sounds/key-remove2.wav" id="8_1rgtq"]
[ext_resource type="PackedScene" uid="uid://udigdayvrvfd" path="res://scenes/flags.tscn" id="9_7xqix"]

[sub_resource type="SphereShape3D" id="SphereShape3D_r1op0"]
radius = 0.031262457

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_f03f1"]
streams_count = 4
stream_0/stream = ExtResource("3_7unom")
stream_1/stream = ExtResource("4_nguq0")
stream_2/stream = ExtResource("5_mkvtx")
stream_3/stream = ExtResource("6_hwmnf")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8rev2"]
streams_count = 2
stream_0/stream = ExtResource("7_hudg4")
stream_1/stream = ExtResource("8_1rgtq")

[node name="Baby" type="Node3D" node_paths=PackedStringArray("flags")]
script = ExtResource("1_r1op0")
flags = NodePath("Flags")

[node name="Model" parent="." instance=ExtResource("1_k8j53")]

[node name="Mouth" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0002793707, 0.5127413, -0.084092095)
collision_layer = 32
collision_mask = 4
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Mouth"]
shape = SubResource("SphereShape3D_r1op0")

[node name="BottleLockMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.057929896, 0.99832076, 0, -0.99832076, 0.057929896, 0, 0.51269186, -0.0017404333)

[node name="SndInsert" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = SubResource("AudioStreamRandomizer_f03f1")

[node name="SndRemove" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = SubResource("AudioStreamRandomizer_8rev2")

[node name="Flags" parent="." instance=ExtResource("9_7xqix")]
transform = Transform3D(0.759217, 0, 0, 0, 0.7300541, -0.20840228, 0, 0.20840228, 0.7300541, -0.1343719, 0.3513995, 0.065250754)

[connection signal="body_entered" from="Mouth" to="." method="_on_collision_area_body_entered"]
[connection signal="body_exited" from="Mouth" to="." method="_on_collision_area_body_exited"]
